package com.example.order.grpc;

import com.example.order.service.OrderService;
import org.springframework.beans.factory.annotation.Autowired;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

/**
 * gRPC Service implementation for Order operations
 */
// @GrpcService  // Commented out due to missing dependencies
public class OrderGrpcService {
    
    private static final Logger logger = LoggerFactory.getLogger(OrderGrpcService.class);
    
    @Autowired
    private OrderService orderService;
    
    public void createOrder(Object request, Object responseObserver) {
        try {
            logger.info("Creating order");
            
            // TODO: Implement order creation logic
            Object order = orderService.createOrder(request);
            
            logger.info("Order created successfully");
            
        } catch (Exception e) {
            logger.error("Error creating order", e);
        }
    }
    
    public void getOrder(Object request, Object responseObserver) {
        try {
            logger.info("Getting order");
            
            Object order = orderService.getOrderById("dummy-id");
            
            logger.info("Order retrieved successfully");
            
        } catch (Exception e) {
            logger.error("Error getting order", e);
        }
    }
    
    public void updateOrderStatus(Object request, Object responseObserver) {
        try {
            logger.info("Updating order status");
            
            Object order = orderService.updateOrderStatus(request);
            
            logger.info("Order status updated successfully");
            
        } catch (Exception e) {
            logger.error("Error updating order status", e);
        }
    }
    
    public void cancelOrder(Object request, Object responseObserver) {
        try {
            logger.info("Cancelling order");
            
            boolean success = orderService.cancelOrder("dummy-id");
            
            logger.info("Order cancelled: {}", success);
            
        } catch (Exception e) {
            logger.error("Error cancelling order", e);
        }
    }
    
    public void listUserOrders(Object request, Object responseObserver) {
        try {
            logger.info("Listing user orders");
            
            // TODO: Implement order listing logic
            
            logger.info("User orders listed successfully");
            
        } catch (Exception e) {
            logger.error("Error listing user orders", e);
        }
    }
    
    public void listOrders(Object request, Object responseObserver) {
        try {
            logger.info("Listing all orders");
            
            // TODO: Implement order listing logic
            
            logger.info("Orders listed successfully");
            
        } catch (Exception e) {
            logger.error("Error listing orders", e);
        }
    }
}
